# noah

./: .env.example  AGENTS.md  Dockerfile  README.md  flake.nix  justfile  package.json
.codex/skills/react-compiler/: SKILL.md
.github/workflows/: android-mainnet-artifacts.yml  client-telegram.yml  client.yml  fly-mainnet-deploy.yml  ios-device-build.yml  ios-telegram.yml  noah-build-release-ios.yml  noah-maestro-test-ios.yml  release.yml  server-manual-push.yml  server-push.yml  server.yml
client/: .prettierignore  App.tsx  app.config.ts  assets.d.ts  btcmap.d.ts  geonames.d.ts  metro.config.js  package.json  tsconfig.json
client/.maestro/: email-verification.yml  offboard-ark.yml  setup-wallet.yml
client/.maestro/scripts/: lightning-address.js
client/android/: gradle.properties  gradlew.bat
client/android/app/: build.gradle
client/assets/geonames/: cities.geonames
client/ios/: Podfile  Podfile.properties.json
client/ios/Noah.xcodeproj/: project.pbxproj
client/ios/noah/: Info.plist  PrivacyInfo.xcprivacy
client/nitromodules/noah-tools/: nitro.json  package.json
client/plugins/: withNoahIosPrebuildFix.js
client/src/: AppServices.tsx  Navigators.tsx  constants.ts
client/src/components/: AutoBoardingService.tsx  AutoBoardingStatusBanner.tsx  BackupStatusBanner.tsx  BiometricGate.tsx  BoardArkBottomSheet.tsx  BrandIcons.tsx  ConfirmationDialog.tsx  CurrencyToggle.tsx  EmailVerificationBanner.tsx  FeeEstimateSummary.tsx  FeedbackBottomSheet.tsx  HistoryRefreshButton.tsx  PendingRoundStatusBanner.tsx  QRCodeScanner.tsx  ReceiveSuccess.tsx  SendConfirmation.tsx  SendSuccessBottomSheet.tsx  StatusBannerStrip.tsx  VtxoRefreshDialog.tsx  VtxoRefreshStatusBanner.tsx
client/src/contexts/: AlertProvider.tsx
client/src/hooks/: useAndroidBackgroundSync.ts  useBackgroundJobCoordination.ts  useBackupCoordinator.ts  useBackupManager.ts  useBitcoinAmountFormatter.ts  useBoardingTransactions.ts  useBtcMap.ts  useCitySearch.ts  useEsplora.ts  useExportDatabase.ts  useMailboxAuthorization.ts  useMarketData.ts  usePayments.ts  usePushNotifications.ts  useQRCodeScanner.ts  useReceiveScreen.ts  useSendScreen.ts  useTransactions.ts  useUnilateralExit.ts  useUpdateLightningAddress.ts  useWallet.ts  useWidget.ts
client/src/lib/: api.ts  autoBoarding.ts  backupCoordinator.ts  backupService.ts  barkMovement.ts  base64.ts  bitcoinAmount.ts  btcMap.ts  btcMapUtils.ts  citySearch.ts  crypto.ts  deviceInfo.ts  esplora.ts  esploraUrl.test.js  esploraUrl.ts  exitApi.ts  exitTimeline.ts  fiatCurrency.ts  fonts.ts  lightningInvoice.ts  lightningReceiveAmounts.ts  onchainSend.ts  paymentsApi.ts  pushNotifications.ts  queryInvalidation.ts  sendUtils.ts  server.ts  sync.ts  tasks.ts  transactionHistory.ts  transactionsDb.ts  utils.ts  walletApi.ts  walletConfig.ts  walletOperationCoordinator.ts  walletOperationCoordinatorCore.ts
client/src/screens/: ArkInfoScreen.tsx  ArkServerAccessTokenScreen.tsx  BackupSettingsScreen.tsx  BetaWarningScreen.tsx  BitcoinUnitSettingsScreen.tsx  BoardArkScreen.tsx  BoardingTransactionDetailScreen.tsx  BoardingTransactionsScreen.tsx  BtcMapScreen.tsx  CurrencySettingsScreen.tsx  DebugScreen.tsx  EmailVerificationScreen.tsx  EsploraSettingsScreen.tsx  ExitVtxoDetailScreen.tsx  ExportDatabaseScreen.tsx  FeedbackScreen.tsx  HomeScreen.tsx  LightningAddressScreen.tsx  LogScreen.tsx  MnemonicScreen.tsx  NoahStoryScreen.tsx  OnboardingScreen.tsx  (+14 more)
docs/: backups.md  expo_ui_migration_todo.md  unified_push.md  unilateral_exits_plan.md
fly/: mainnet-metabase-setup.md  mainnet-setup.md  mainnet.fly.toml  mainnet.metabase.fly.toml  signet.fly.toml
patches/: expo-modules-jsi@56.0.7.patch
scripts/: ark-dev.sh  captaind.toml  docker-compose.yml  update_btcmap_snapshot.ts  update_geonames_snapshot.ts
server/: Cargo.toml
server/migrations/: 0013_add_user_display_name.sql  0014_add_user_status.sql  0015_add_fiat_rates.sql  0016_add_backup_objects.sql  0017_limit_pending_backup_objects.sql  0018_supersede_backup_uploads.sql  0019_add_device_app_build.sql
server/src/: ark_client.rs  config.rs  cron.rs  errors.rs  fiat_rates.rs  lib.rs  mailbox_auth.rs  mailbox_worker.rs  main.rs  push.rs  rate_limit.rs  s3_client.rs  telegram.rs  types.rs  wide_event.rs  zoho.rs
server/src/cache/: email_verification_store.rs  k1_store.rs
server/src/db/: backup_repo.rs  device_repo.rs  fiat_rate_repo.rs  heartbeat_repo.rs  mailbox_authorization_repo.rs  mod.rs  notification_tracking_repo.rs  push_token_repo.rs  user_repo.rs
server/src/routes/: app_middleware.rs  gated_api_v0.rs  public_api_v0.rs
server/src/tests/: common.rs  email_verification_tests.rs  gated_auth_tests.rs  gated_backup_tests.rs  gated_heartbeat_tests.rs  gated_suggestions_tests.rs  gated_user_tests.rs  public_api_v0.rs
(+59 files in other folders)
