[package]
name = "server"
version = "0.1.0"
edition = "2024"
default-run = "server"

[dependencies]
axum = { version = "0.8.7", features = ["json"] }
anyhow = "1.0.100"
dotenvy = "0.15"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower-http = { version = "0.6.7", features = ["trace"] }
tower_governor = "0.8.0"
governor = "0.10.2"
serde = { version = "1.0.225", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
rand = "0.9.2"
bitcoin = "0.32.7"
thiserror = "2.0.17"
tokio-cron-scheduler = { version = "0.15.1", features = ["english"] }
serde_json = "1.0.145"
random_word = { version = "0.5.0", features = ["en"] }
futures-util = "0.3.30"
bark-server-rpc = { git = "https://gitlab.com/ark-bitcoin/bark", tag = "server-0.1.4" }
ark = { package = "ark-lib", git = "https://gitlab.com/ark-bitcoin/bark", tag = "server-0.1.4" }
deadpool-redis = { version = "0.22.0", features = ["serde", "rt_tokio_1"] }
redis = { version = "0.32.7", features = ["aio", "tokio-comp"] }

async-trait = "0.1.80"
http-body-util = "0.1.1"
validator = { version = "0.20.0", features = ["derive"] }
aws-config = "1.8.11"
aws-sdk-s3 = "1.115.0"
aws-sdk-sesv2 = "1.71.0"
ts-rs = "11.1.0"
sentry = { version = "0.46.0", features = ["tracing", "logs", "tower-axum-matched-path"] }
tower = "0.5.2"
uuid = "1.18.1"
semver = "1.0.27"
sqlx = { version = "0.8.2", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "macros",
  "migrate",
] }
reqwest = "0.12.24"
goose = { version = "0.18.1", optional = true }
clap = { version = "4.5", features = ["derive"] }
regex = "1.12.2"
expo_push_notification_client = "2.0.0"
jsonwebtoken = "9.3.1"

[dev-dependencies]
tower = { version = "0.5.2", features = ["full"] }
tracing-test = "0.2.5"
once_cell = "1.19.0"
ark = { package = "ark-lib", git = "https://gitlab.com/ark-bitcoin/bark", tag = "server-0.1.4", features = [
  "test-util",
] }

[features]
loadtest = ["goose"]

[[bin]]
name = "loadtest"
path = "src/bin/loadtest.rs"
required-features = ["loadtest"]

[[bin]]
name = "noah-cli"
path = "src/bin/cli.rs"
